# jali

./: .gitignore  CMakeLists.txt  README.md  configure-win-vs2022.bat
.github/workflows/: cmake.yml
src/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Literal.cpp  Literal.h  Scanner.cpp  Scanner.h  jlpch.h  main.cpp
test/: CMakeLists.txt  ScannerTest.cpp
